// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Root > should render properly for anonymous users 1`] = `
<div
  class="css-bv0go7"
  data-component-name="app"
>
  <div>
    Helmet
  </div>
  <main
    class="css-46qa52"
  >
    <div
      class="css-146gbh6"
      data-component-name="Home"
    >
      <div
        class="css-1ym6d5y"
        data-component-name="Container"
      >
        <div
          class="css-167s73c"
          data-component-name="Box"
        >
          <div
            class="css-1llpsq5"
          >
            <div
              class="css-11mttn6"
            >
              <svg
                src="/media/brand/icon.svg"
              />
            </div>
          </div>
          <h1
            class="css-2kvgnr"
          >
            React Redux Saga Boilerplate
          </h1>
          <button
            class="css-3qd3v6"
            data-component-name="Start"
            type="button"
          >
            <span
              class="css-1k4akb"
              data-component-name="Icon"
              name="star"
            >
              <svg
                height="24"
                src="https://files.gilbarbara.dev/icons/star.svg"
                title="star"
                width="24"
              />
            </span>
            <span
              class="css-iz9y3l"
              data-component-name="Text"
            >
              Start
            </span>
          </button>
        </div>
      </div>
    </div>
  </main>
  <footer
    class="css-mtlhd8"
    data-component-name="Box"
  >
    <div
      class="css-fd9se2"
      data-component-name="Container"
    >
      <div
        class="css-1xy02bk"
        data-component-name="Box"
      >
        <iframe
          frameborder="0"
          height="20px"
          scrolling="0"
          src="https://ghbtns.com/github-btn.html?user=gilbarbara&repo=react-redux-saga-boilerplate&type=star&count=true"
          title="GitHub Stars"
          width="110px"
        />
        <iframe
          frameborder="0"
          height="20px"
          scrolling="0"
          src="https://ghbtns.com/github-btn.html?user=gilbarbara&type=follow&count=true"
          title="GitHub Follow"
          width="135px"
        />
      </div>
    </div>
  </footer>
  <div
    class="css-1ewh9kd"
  >
    <div
      class="css-vg32sl"
    >
      <div />
    </div>
    <div
      class="css-1r5pw8k"
    >
      <div />
    </div>
    <div
      class="css-50gqfe"
    >
      <div />
    </div>
    <div
      class="css-ypj8vw"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Root > should render properly for logged users 1`] = `
<div
  class="css-bv0go7"
  data-component-name="app"
>
  <div>
    Helmet
  </div>
  <header
    class="css-157to9t"
    data-component-name="Header"
  >
    <div
      class="css-1ejvhcb"
      data-component-name="Container"
    >
      <div
        class="css-11mttn6"
      >
        <svg
          src="/media/brand/icon.svg"
        />
      </div>
      <button
        class="css-17rt720"
        data-component-name="Logout"
      >
        <span
          class="css-lo0v0o"
          data-component-name="Text"
        >
          logout
        </span>
        <span
          class="css-10mt42n"
          data-component-name="Icon"
          name="sign-out"
        >
          <svg
            height="16"
            src="https://files.gilbarbara.dev/icons/sign-out.svg"
            title="sign-out"
            width="16"
          />
        </span>
      </button>
    </div>
  </header>
  <main
    class="css-gewp09"
  >
    <div
      data-to="/private"
    >
      NAVIGATE
    </div>
  </main>
  <footer
    class="css-mtlhd8"
    data-component-name="Box"
  >
    <div
      class="css-fd9se2"
      data-component-name="Container"
    >
      <div
        class="css-1xy02bk"
        data-component-name="Box"
      >
        <iframe
          frameborder="0"
          height="20px"
          scrolling="0"
          src="https://ghbtns.com/github-btn.html?user=gilbarbara&repo=react-redux-saga-boilerplate&type=star&count=true"
          title="GitHub Stars"
          width="110px"
        />
        <iframe
          frameborder="0"
          height="20px"
          scrolling="0"
          src="https://ghbtns.com/github-btn.html?user=gilbarbara&type=follow&count=true"
          title="GitHub Follow"
          width="135px"
        />
      </div>
    </div>
  </footer>
  <div
    class="css-1ewh9kd"
  >
    <div
      class="css-vg32sl"
    >
      <div />
    </div>
    <div
      class="css-1r5pw8k"
    >
      <div />
    </div>
    <div
      class="css-50gqfe"
    >
      <div />
    </div>
    <div
      class="css-ypj8vw"
    >
      <div>
        <div
          class="css-1cmax56 slide-left-enter slide-left-enter-active"
        >
          <div
            class="css-d735a"
            data-component-name="Alert"
            role="alert"
          >
            <span
              class="css-nri15g"
              data-component-name="Icon"
              name="bell"
            >
              <svg
                height="20"
                src="https://files.gilbarbara.dev/icons/bell.svg"
                title="bell"
                width="20"
              />
            </span>
            <span
              class="css-lo0v0o"
              data-component-name="Text"
            >
              <div
                class="css-185xs5d"
                data-component-name="Box"
              >
                Hello! And welcome!
              </div>
              <button
                class="css-1sdkvsj"
                data-id="8cdee72f-28d4-4441-91f0-c61f6e3d9684"
                type="button"
              >
                <span
                  class="css-fjs4pi"
                  data-component-name="Icon"
                  name="times"
                >
                  <svg
                    height="10"
                    src="https://files.gilbarbara.dev/icons/times.svg"
                    title="times"
                    width="10"
                  />
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
